--- a/r-xlsxjars-feedstock/recipe/meta.yaml
+++ b/r-xlsxjars-feedstock/recipe/meta.yaml
@@ -48,6 +48,8 @@ requirements:
     - r-rjava
 
 test:
+  requires:
+    - openjdk
   commands:
     # You can put additional test commands to be run here.
     - $R -e "library('xlsxjars')"           # [not win]
