r-xlsx: Add test/requires of openjdk

--- a/r-xlsx-feedstock/recipe/meta.yaml
+++ b/r-xlsx-feedstock/recipe/meta.yaml
@@ -50,6 +50,8 @@ requirements:
     - r-xlsxjars
 
 test:
+  requires:
+    - openjdk
   commands:
     # You can put additional test commands to be run here.
     - $R -e "library('xlsx')"           # [not win]
