--- a/r-bcp-feedstock/recipe/meta.yaml
+++ b/r-bcp-feedstock/recipe/meta.yaml
@@ -40,6 +40,7 @@ requirements:
   build:
     - {{ compiler('c') }}          # [linux]
     - {{ compiler('cxx') }}        # [linux]
+    - {{ compiler('fortran') }}    # [linux]
     - {{native}}toolchain          # [win32]
     - {{posix}}filesystem          # [win32]
     - {{posix}}make                # [linux or win32]
