r-rgl: Add CDT packages and dependencies

--- a/r-rgl-feedstock/recipe/meta.yaml
+++ b/r-rgl-feedstock/recipe/meta.yaml
@@ -49,6 +49,26 @@ requirements:
     - {{posix}}automake            # [win32]
     - {{posix}}pkg-config
     - {{posix}}make                # [linux or win32]
+    - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+    - {{ cdt('mesa-libgl-devel') }}      # [linux]
+    - {{ cdt('libx11-devel') }}          # [linux]
+    - {{ cdt('libxext-devel') }}         # [linux]
+    - {{ cdt('libxrender-devel') }}      # [linux]
+    - {{ cdt('mesa-libgl-devel') }}      # [linux]
+    - {{ cdt('mesa-libegl-devel') }}     # [linux]
+    - {{ cdt('mesa-dri-drivers') }}      # [linux]
+    - {{ cdt('libxau-devel') }}          # [linux]
+    - {{ cdt('libdrm-devel') }}          # [linux]
+    - {{ cdt('libxcomposite-devel') }}   # [linux]
+    - {{ cdt('libxcursor-devel') }}      # [linux]
+    - {{ cdt('libxi-devel') }}           # [linux]
+    - {{ cdt('libxrandr-devel') }}       # [linux]
+    - {{ cdt('libxscrnsaver-devel') }}   # [linux]
+    - {{ cdt('libxtst-devel') }}         # [linux]
+    - {{ cdt('libselinux-devel') }}      # [linux]
+    - {{ cdt('libxdamage') }}            # [linux]
+    - {{ cdt('libxfixes') }}             # [linux]
+    - {{ cdt('libxxf86vm') }}            # [linux]
 
   host:
     - mro-base
@@ -58,6 +78,10 @@ requirements:
     - r-knitr
     - r-magrittr
     - r-shiny
+    - expat                              # [linux]
+    - libglu                             # [linux]
+    - libpng                             # [linux]
+    - {{native}}libpng                   # [win32]
 
   run:
     - mro-base
