--- a/r-rgl-feedstock/recipe/meta.yaml
+++ b/r-rgl-feedstock/recipe/meta.yaml
@@ -25,7 +25,7 @@ source:
 
 
 build:
-  merge_build_host: True  # [win32]
+  merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
@@ -82,6 +82,7 @@ requirements:
     - libglu                             # [linux]
     - libpng                             # [linux]
     - {{native}}libpng                   # [win32]
+    - {{native}}freetype                 # [linux]
 
   run:
     - mro-base
@@ -92,6 +93,7 @@ requirements:
     - r-knitr
     - r-magrittr
     - r-shiny
+    - libglu                             # [linux]
 
 test:
   commands:
