--- a/r-gmp-feedstock/recipe/meta.yaml
+++ b/r-gmp-feedstock/recipe/meta.yaml
@@ -52,10 +52,12 @@ requirements:
 
   host:
     - mro-base
+    - {{native}}gmp                # [linux or win32]
 
   run:
     - mro-base
     - {{native}}gcc-libs           # [win32]
+    - {{native}}gmp                # [linux or win32]
 
 test:
   commands:
