--- a/r-nloptr-feedstock/recipe/meta.yaml
+++ b/r-nloptr-feedstock/recipe/meta.yaml
@@ -52,12 +52,12 @@ requirements:
 
   host:
     - mro-base
-    - {{native}}nlopt              # [linux or win32]
+    - {{native}}nlopt              # [win32]
 
   run:
     - mro-base
     - {{native}}gcc-libs           # [win32]
-    - {{native}}nlopt              # [linux or win32]
+    - {{native}}nlopt              # [win32]
 
 test:
   commands:
