--- a/r-pbdzmq-feedstock/recipe/meta.yaml
+++ b/r-pbdzmq-feedstock/recipe/meta.yaml
@@ -52,12 +52,13 @@ requirements:
 
   host:
     - mro-base
-    - r-r6
+    - {{native}}zeromq 4.2.*       # [linux or win32]
 
   run:
     - mro-base
     - {{native}}gcc-libs           # [win32]
     - r-r6
+    - {{native}}zeromq 4.2.*       # [linux or win32]
 
 test:
   commands:
