r-jpeg: Add libjpeg/libjpeg-turbo host deps

--- a/r-jpeg-feedstock/recipe/meta.yaml
+++ b/r-jpeg-feedstock/recipe/meta.yaml
@@ -45,6 +45,8 @@ requirements:
 
   host:
     - mro-base
+    - {{native}}libjpeg-turbo            # [win32]
+    - {{native}}jpeg                     # [linux]
 
   run:
     - mro-base
