--- a/r-odbc-feedstock/recipe/meta.yaml
+++ b/r-odbc-feedstock/recipe/meta.yaml
@@ -58,6 +58,7 @@ requirements:
     - r-bit64
     - r-blob >=1.1.0
     - r-hms
+    - {{native}}unixodbc         # [linux]
 
   run:
     - mro-base
@@ -68,6 +69,7 @@ requirements:
     - r-bit64
     - r-blob >=1.1.0
     - r-hms
+    - {{native}}unixodbc         # [linux]
 
 test:
   commands:
