r-rodbc: Add unixodbc deps

--- a/r-rodbc-feedstock/recipe/meta.yaml
+++ b/r-rodbc-feedstock/recipe/meta.yaml
@@ -51,10 +51,12 @@ requirements:
 
   host:
     - mro-base
+    - {{native}}unixodbc           # [linux]
 
   run:
     - mro-base
     - {{native}}gcc-libs           # [win32]
+    - {{native}}unixodbc           # [linux]
 
 test:
   commands:
