Fixes for RevoUtils
Next commit will comment this part out though because it puts the source
code into lib/R/library instead of a built binary (oops).

Once I have rebuilt mro-base I will use that to build the binary then put
this code back in place. Urgh.

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -35,7 +35,7 @@ source:
     folder: wix                                                                              # [win64]
   # The normal RevoUtils looks in the Windows Registry to determine if it's the Client or the Server version.
   # We do not write to the Windows Registry so were provided with this one instead.
-  - file: ./RevoUtils_10.0.8.tar.gz                                                          # [win64]
+  - url: ./RevoUtils_10.0.8.tar.gz                                                          # [win64]
     sha256: 59a9840c44da2207857ef665272ae2cfc6f759578b956c1b7a05827750445ae2                 # [win64]
     folder: RevoUtils                                                                        # [win64]
 
