Add some deps to r-mrclient since they are in options("defaultPackages")
Really to get rid of some warnings during test

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -1158,6 +1158,9 @@ outputs:
         # - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-iterators', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-foreach', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-rpart', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-lattice', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-revomods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
         - libcurl  # [linux]
@@ -1176,6 +1179,9 @@ outputs:
         # - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-iterators', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-foreach', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-rpart', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-lattice', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-revomods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - mro-base {{ version }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
