--- a/r-rbokeh-feedstock/recipe/meta.yaml
+++ b/r-rbokeh-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.5.0' %}
+{% set version = '0.6.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,24 +8,17 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: rbokeh_0.5.0.tar.gz  # [linux or win32]
-  url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/rbokeh_0.5.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/rbokeh/rbokeh_0.5.0.tar.gz  # [linux or win32]
-  sha256: 499c3224a7dcaeb4bb60fd645b3ef528a20e59437747a073713941b80cbcebd2  # [linux or win32]
 
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/rbokeh_0.5.0.zip  # [win64]
-  sha256: 8bc8f541dd0de3ef6b2c81cfeb571ae361f773cbbf1623bee843b06609285a81  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/rbokeh_0.5.0.tgz  # [osx]
-  sha256: f0bc6debffc2003e5573640e8ea45bc3f72d97ad643d62490525d6317773b4d5  # [osx]
-
+  # You can add a hash for the file here, like md5, sha1 or sha256
+  git_url: https://github.com/bokeh/rbokeh
+  git_tag: v0.6.3
+  # patches:
+   # List any patch files here
+   # - fix.patch
 
 build:
-  merge_build_host: True  # [linux or win32]
+  merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
@@ -35,36 +28,40 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: testthat, data.table, lattice, lintr, roxygen2 (>= 5.0.0), knitr
+# Suggests: testthat, lintr, roxygen2 (>= 5.0.0)
 requirements:
   build:
+    - {{posix}}filesystem        # [win]
+    - {{posix}}git
 
   host:
     - mro-base
+    - r-r6
+    - r-curl
     - r-digest
-    - r-ggplot2
-    - r-gistr
+    - r-glue
     - r-hexbin
-    - r-htmlwidgets >=0.5
+    - r-htmlwidgets
     - r-jsonlite
-    - r-lazyeval
+    - r-lattice
     - r-magrittr
     - r-maps
-    - r-pryr
+    - r-rlang
     - r-scales
 
   run:
     - mro-base
+    - r-r6
+    - r-curl
     - r-digest
-    - r-ggplot2
-    - r-gistr
+    - r-glue
     - r-hexbin
-    - r-htmlwidgets >=0.5
+    - r-htmlwidgets
     - r-jsonlite
-    - r-lazyeval
+    - r-lattice
     - r-magrittr
     - r-maps
-    - r-pryr
+    - r-rlang
     - r-scales
 
 test:
@@ -88,13 +85,15 @@ about:
 
 extra:
   recipe-maintainers:
+    - johanneskoester
+    - bgruening
     - mingwandroid
 
 # The original CRAN metadata for this package was:
 
 # Package: rbokeh
 # Title: R Interface for Bokeh
-# Version: 0.5.0
+# Version: 0.6.3
 # Authors@R: c( person("Ryan", "Hafen", email = "rhafen@gmail.com", role = c("aut", "cre")), person("Kenton", "Russell", email = "kent.russell@timelyportfolio.com", role = "ctb"), person("Jonathan", "Owen", email = "jonathanro@gmail.com", role = "ctb"), person("Barret", "Schloerke", email = "schloerke@gmail.com", role = "ctb"), person("Saptasrhi", "Guha", email = "saptarshi.guha@gmail.com", role = "ctb"), person("Continuum Analytics, Inc.", role = c("aut", "cph"), comment = "Bokeh library in htmlwidgets/lib, http://bokeh.pydata.org" ))
 # Description: A native R plotting library that provides a flexible declarative interface for creating interactive web-based graphics, backed by the Bokeh visualization library <http://bokeh.pydata.org/>.
 # URL: https://hafen.github.io/rbokeh https://github.com/bokeh/rbokeh
@@ -102,16 +101,9 @@ extra:
 # License: MIT + file LICENSE
 # LazyData: true
 # NeedsCompilation: no
-# Imports: htmlwidgets (>= 0.5), maps, methods, jsonlite, digest, hexbin, lazyeval, pryr, magrittr, ggplot2, scales, gistr
-# Suggests: testthat, data.table, lattice, lintr, roxygen2 (>= 5.0.0), knitr
-# Enhances: shiny (>= 0.12)
-# RoxygenNote: 5.0.1
-# VignetteBuilder: knitr
-# Packaged: 2016-10-11 17:12:44 UTC; hafen
-# Author: Ryan Hafen [aut, cre], Kenton Russell [ctb], Jonathan Owen [ctb], Barret Schloerke [ctb], Saptasrhi Guha [ctb], Continuum Analytics, Inc. [aut, cph] (Bokeh library in htmlwidgets/lib, http://bokeh.pydata.org)
-# Maintainer: Ryan Hafen <rhafen@gmail.com>
-# Repository: CRAN
-# Date/Publication: 2016-10-12 00:08:32
+# Imports: R6, jsonlite, digest, methods, htmlwidgets, magrittr, curl, glue, rlang, scales, hexbin, lattice, maps
+# Suggests: testthat, lintr, roxygen2 (>= 5.0.0)
+# RoxygenNote: 6.0.1
 
 # See
 # http://docs.continuum.io/conda/build.html for
