--- a/r-recommended-feedstock/recipe/meta.yaml
+++ b/r-recommended-feedstock/recipe/meta.yaml
@@ -9,8 +9,10 @@ build:
   number: 0
 
 requirements:
+  build:
+    - mro-base
   run:
-    - mro-base {{ version }}
+    - mro-base
     - r-boot
     - r-class
     - r-cluster
