--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -10,9 +10,9 @@ build:
 
 requirements:
   build:
-    - r-base
+    - mro-base
   run:
-    - r-base {{ version }}
+    - mro-base {{ version }}
     - r-recommended {{ version }}
     - mro-basics {{ version }}
 
