--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -1,7 +1,7 @@
 
 {% set pfx = 'r-' %}
 {% set version = '3.4.3' %}
-{% set rc_version = '3.4.1' %}
+{% set rc_version = '3.4.3' %}
 
 {% set url = 'https://mran.blob.core.windows.net/install/mro/3.4.3/microsoft-r-open-3.4.3.exe' %}  # [win64]
 {% set fn = 'microsoft-r-open-3.4.3.exe' %}  # [win64]
@@ -24,8 +24,11 @@ source:
     fn: {{ fn }}
     sha256: {{ shasum }}
     folder: unpack
-  - url: https://packages.microsoft.com/rhel/6/prod/microsoft-r-client-packages-{{ rc_version }}.rpm  # [linux]
-    sha256: 5fd191776bfb5cfb6e2bac54a466ccc2714372b620d1fb1a82e19e40d3962d31  # [linux]
+#  - url: https://packages.microsoft.com/rhel/6/prod/microsoft-r-client-packages-{{ rc_version }}.rpm  # [linux]
+#    sha256: 5fd191776bfb5cfb6e2bac54a466ccc2714372b620d1fb1a82e19e40d3962d31  # [linux]
+#    folder: unpack-r-client  # [linux]
+  - url: ~/conda/microsoft-r-client-packages-{{ rc_version }}.rpm  # [linux]
+    sha256: 336c59f2199c72b2dbdcd2d505e7ea77b186dc3139b3ab8933b75a13d080b8cd  # [linux]
     folder: unpack-r-client  # [linux]
   - url: https://rserverdistribution.azureedge.net/production/RClient/3.4.1.0/1360/1033/0900ccb335c04a048f26b4bb3320aef8/RClientSetup.exe  # [win64]
     sha256: 011cb6eddb4ad58cb8c3de4032a2243187c879eefa7cf82896dbdc3823c1944f  # [win64]
@@ -1133,7 +1136,8 @@ outputs:
       license_family: LGPL
 
   - name: r-mrclient  # [linux or win]
-    version: '3.4.1.3.4.3'  # [linux or win]
+    version: '3.4.1.3.4.3'  # [win]
+    version: {{ rc_version }}  # [linux]
     script: install-r-mrclient.sh  # [linux or win]
     build:  # [linux or win]
       missing_dso_whitelist:  # [linux or win]
