mro: Windows updates for RTC RClientSetup.exe

--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -39,8 +39,11 @@ source:
   - url: ~/conda/microsoft-r-client-mlm-3.4.3.rpm  # [linux64]
     sha256: 878d6dad7e96f3d3d49ee4661987f58dd213ba04df244ac37244f15530e52f99  # [linux64]
     folder: unpack-r-client-mlm  # [linux64]
-  - url: https://rserverdistribution.azureedge.net/production/RClient/3.4.1.0/1360/1033/0900ccb335c04a048f26b4bb3320aef8/RClientSetup.exe  # [win64]
-    sha256: 011cb6eddb4ad58cb8c3de4032a2243187c879eefa7cf82896dbdc3823c1944f  # [win64]
+#  - url: https://rserverdistribution.azureedge.net/production/RClient/3.4.1.0/1360/1033/0900ccb335c04a048f26b4bb3320aef8/RClientSetup.exe  # [win64]
+#    sha256: 011cb6eddb4ad58cb8c3de4032a2243187c879eefa7cf82896dbdc3823c1944f  # [win64]
+#    folder: unpack-r-client  # [win64]
+  - url: ~/conda/RClientSetup.exe  # [win64]
+    sha256: 44dca045e6e5e8083377ee17aedcf2ca0ccd8ac9518a7f173ad934bd127dad5a  # [win64]
     folder: unpack-r-client  # [win64]
   - url: https://github.com/wixtoolset/wix3/releases/download/wix311rtm/wix311-binaries.zip  # [win64]
     sha256: da034c489bd1dd6d8e1623675bf5e899f32d74d6d8312f8dd125a084543193de                 # [win64]
